Prevent images from popping out on mobile devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -345,3 +345,9 @@ body {
     transform-origin: bottom right; 
   }
 }
+
+@media (max-width: 480px) {
+    .phonk-logo, .phonk-character, .social-icon, .cars-image {
+        pointer-events: none;
+    }
+}
